[tool.poetry]
name = "kupi-raur"
version = "0.1.0"
description = ""
authors = ["Parth Gandhi <parthgandhi@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.6"
openai = "^0.28.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pypdf = "^3.16.0"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"
jupyterlab-widgets = "^3.0.9"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^23.9.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
